<resources>
    <string name="app_name">Business Reviews Hub</string>
    <!-- Bottom Bar -->
    <string name="str_send_sms">New Message</string>
    <string name="str_history">History</string>
    <string name="str_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Edit user profile-->
    <string name="str_user_first_name">First Name</string>
    <string name="str_user_last_name">Last Name</string>
    <string name="str_user_password">Password</string>
    <string name="str_hint_first_name">Enter First Name</string>
    <string name="str_hint_last_name">Enter Last Name</string>
    <string name="str_hint_password">Enter Password</string>
    <string name="str_profile_save">Save</string>
    <!-- Login Activity-->
    <string name="str_login_activity">Login</string>
    <string name="str_btn_login">LOGIN</string>
    <string name="str_hint_username">Email id</string>
    <string name="str_btn_sign_in">Sign In</string>
    <string name="str_hint_select_company">Company Code</string>
    <string name="str_btn_send_sms">Send Sms</string>
    <string name="str_btn_clear">Clear</string>
    <string name="str_hint_cust_name">Customer Name</string>
    <string name="str_hint_ph_no">Phone Number</string>
    <string name="str_login_copyright_title">Copyright&#169;</string>
    <string name="str_login_copyright">&#169; Business Reviews Hub</string>
    <string name="str_login_rightRes">All rights reserved</string>
    <string name="str_login_website">Looking for something ? \nVisit our website www.businessreviewshub.com</string>
    <string name="str_history_list_title">Customer SMS History</string>
    <string name="str_poweredby">Powered by</string>
    <string name="str_powered_business">Business Reviews Hub</string>
    <!-- Login screen-->
    <string name="str_err_server_err">Server Error</string>
    <string name="please_wait">Please wait…</string>
    <string name="dlg_ok">Ok</string>
    <string name="dlg_cancel">Cancel</string>
    <!-- Send SMS Screen-->
    <string name="str_sms_success">SMS SEND</string>
    <string name="str_sms_Message">Thank you for your feedback</string>

    <!-- Profile  Update-->
    <string name="str_prfile_success">Profile updated Successfully</string>
    <string name="str_prfile">User Profile</string>
    <string name="str_select_picture">Select Picture</string>
    <string name="str_unexpected_error">Unexpected error</string>
    <string name="str_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="str_ok">Ok</string>
    <string name="str_cancel">Ok</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>

    <string name="str_cannot_retrieve_selected_image">Cannot retrieve selected image</string>

    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="str_no_internet">Internet connection is not available</string>
    <string name="str_user_name">Please enter user email id</string>
    <string name="str_user_invalid">Invalid email id</string>
    <string name="str_user_pwd">Please enter your password</string>
    <string name="str_company_code">Please enter your company code</string>
    <string name="str_pro_user">Please enter your name</string>
    <string name="str_pro_ph">Please enter your phone number</string>
    <string name="str_pro_pwd">Please enter your password</string>
    <string name="str_sms_cust">Please Enter Customer Name</string>
    <string name="str_sms_cust_ph">Please Enter Phone no</string>
    <string name="str_forgot_pwd">Forgot password?</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="str_forgot_btn">Send</string>
    <string name="forgot_pwd_message">You\'r password has been sent to register email id.</string>


</resources>
