<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.businessreviewshub.fragments.EditProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/avatar_profile" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:id="@+id/firstView"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#e2e0e0" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <com.businessreviewshub.views.RobotoTextView
                            android:id="@+id/userFirstName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/str_user_first_name"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/editUserFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:padding="4dp"
                            android:singleLine="true"
                            android:hint="@string/str_hint_first_name"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <View
                        android:id="@+id/secondView"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#e2e0e0" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <com.businessreviewshub.views.RobotoTextView
                            android:id="@+id/userLastName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/str_user_last_name"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/editUserLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:padding="4dp"
                            android:singleLine="true"
                            android:hint="@string/str_hint_last_name"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <View
                        android:id="@+id/thirdView"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#e2e0e0" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <com.businessreviewshub.views.RobotoTextView
                            android:id="@+id/userPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/str_user_password"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/editUserPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:padding="4dp"
                            android:inputType="textPassword"
                            android:hint="@string/str_hint_password"
                            android:singleLine="true"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <View
                        android:id="@+id/fifthView"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#e2e0e0" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
