<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_new_logo_back"
    tools:context="com.businessreviewshub.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/bottom_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/transLoginText"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/txtWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/str_login_website"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_textView"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transWhiteLogin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:foregroundGravity="center"
                    android:padding="32dp"
                    android:src="@mipmap/ic_launcher" />

                <!-- <android.support.v7.widget.CardView
                     android:id="@+id/cv"
                     android:layout_width="300dp"
                     android:layout_height="290dp"
                     android:layout_centerInParent="true"
                     app:cardCornerRadius="6dp"
                     app:cardElevation="3dp"
                     app:cardUseCompatPadding="true">-->
                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/str_btn_login"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <LinearLayout
                    android:id="@+id/user_detail_layout"
                    android:layout_width="300dp"
                    android:layout_height="344dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="30dp">


                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_person_grey_24"
                            android:hint="@string/str_hint_username"
                            android:inputType="textEmailAddress"
                            android:paddingBottom="4dp"
                            android:textColor="@color/primaryText2"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="30dp">


                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_lock_grey_24"
                            android:hint="@string/str_hint_password"
                            android:inputType="textPassword"
                            android:paddingBottom="4dp"
                            android:textColor="@color/primaryText2"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="30dp">


                        <EditText
                            android:id="@+id/et_select_cmp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_company_grey_24"
                            android:hint="@string/str_hint_select_company"
                            android:inputType="number"
                            android:paddingBottom="4dp"
                            android:textColor="@color/primaryText2"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        android:paddingEnd="30dp"
                        android:paddingStart="30dp">

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_custom"
                            android:text="@string/str_btn_sign_in"
                            android:textColor="@android:color/white"></Button>


                    </LinearLayout>

                    <TextView
                        android:id="@+id/forgot_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:padding="3dp"
                        android:paddingStart="30dp"
                        android:text="@string/str_forgot_pwd"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"
                        android:textStyle="italic|bold" />

                    <TextView
                        android:id="@+id/txtCopyRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:padding="3dp"
                        android:text="@string/str_login_copyright"
                        android:textColor="@color/primaryText2"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txtRightRevers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:text="@string/str_login_rightRes"
                        android:textColor="@color/primaryText2"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingEnd="30dp"
                        android:paddingStart="30dp">

                        <!-- <TextView
                             android:id="@+id/txtCopyRightTitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
                             android:layout_marginTop="4dp"
                             android:text="@string/str_login_copyright_title"
                             android:textColor="@color/primaryText2"
                             android:textSize="10sp" />-->

                        <!-- <TextView
                             android:id="@+id/txtCopyRight"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
                             android:padding="3dp"
                             android:text="@string/str_login_copyright"
                             android:textColor="@color/primaryText2"
                             android:textSize="14sp" />

                         <TextView
                             android:id="@+id/txtRightRevers"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
                             android:text="@string/str_login_rightRes"
                             android:textColor="@color/primaryText2"
                             android:textSize="14sp" />-->


                    </LinearLayout>


                    <!--<RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:background="@drawable/button_custom"
                            android:text="@string/str_btn_sign_in"
                            android:textColor="@android:color/white"></Button>
                    </RelativeLayout>-->
                </LinearLayout>
                <!--</android.support.v7.widget.CardView>-->


            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>
