<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_new_logo_back"
    tools:context="com.businessreviewshub.activities.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transWhiteLogin">

        <LinearLayout
            android:id="@+id/user_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">


                <EditText
                    android:id="@+id/et_select_fp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_company_grey_24"
                    android:hint="@string/str_hint_select_company"
                    android:inputType="number"
                    android:paddingBottom="4dp"
                    android:textColor="@color/primaryText2"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">


                <EditText
                    android:id="@+id/et_username_fp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_person_grey_24"
                    android:hint="@string/str_hint_username"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="4dp"
                    android:textColor="@color/primaryText2"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <Button
                    android:id="@+id/btn_forgot_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_custom"
                    android:text="@string/str_forgot_btn"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"></Button>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
